ansible/k3s-manifests/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
